--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <a href="https://linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
             <hr>
-            <p>Copyright © 2023,Arnika Chaturvedi.</p>
+            <p>Copyright © 2023,Asmita Jain.</p>
         </div>
     </div>
     <script>
